2008-06-03 Josh Kropf <josh.kropf@sonamobile.com>

    * version 0.4
    * JavaPpTask.java (execute): use friendly message from javapp exception
    * javapp.py: raise friendlier exception on KeyError/property undefined


2008-06-02 Josh Kropf <josh.kropf@sonamobile.com>

    * JavaPp.java (process): throw exception with descriptive on python error
    * JavaPpException.java: new class, extracts message from PyException
    * JavaPpTask.java (execute): delete file on javapp error
    * javapp.py: set filename in scanner for more descriptive errors


2008-06-02 Josh Kropf <josh.kropf@sonamobile.com>

    * version 0.3
    * JavaPpTask.java (verbose): new property, output verbose logging
      (execute): print source file name in verbose mode
      (execute): check modification time of destination file to optimize loop


2008-06-02 Josh Kropf <josh.kropf@sonamobile.com>

    * version 0.2
    * JavaPpTask.java (execute): create parent directory of destination files
    * javapp.py: added undefine directive