@@ -1,5 +1,10 @@
 2008-06-03 Josh Kropf <josh.kropf@sonamobile.com>
 
+    * javapp.py: removed superfluous return statements from action procedures
+
+
+2008-06-03 Josh Kropf <josh.kropf@sonamobile.com>
+
     * version 0.4
     * JavaPpTask.java (execute): use friendly message from javapp exception
     * javapp.py: raise friendlier exception on KeyError/property undefined
